--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/stats.js": "^0.17.0",
     "classnames": "^2.5.1",
     "gsap": "^3.13.0",
+    "lil-gui": "^0.11.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "sass": "^1.89.2"
+    "sass": "^1.89.2",
+    "stats.js": "^0.17.0",
+    "three": "^0.134.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
     "@types/node": "^24.0.10",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/three": "^0.136.1",
     "@vitejs/plugin-react-swc": "^3.10.2",
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -29,6 +34,7 @@
     "prettier": "^3.6.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.1",
-    "vite": "^7.0.0"
+    "vite": "^7.0.0",
+    "vite-plugin-string": "^1.2.3"
   }
 }
