--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
   "references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.node.json" }],
   "compilerOptions": {
     "typeRoots": ["./types", "./node_modules/@types"],
-    "lib": ["es2022", "dom"]
+    "lib": ["es2022", "dom"],
+    "noUnusedLocals": false,
+    "noUnusedParameters": false
   }
 }
