--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,6 @@
   "references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.node.json" }],
   "compilerOptions": {
     "typeRoots": ["./types", "./node_modules/@types"],
-    "lib": ["es2022", "dom"],
-    "noUnusedLocals": false,
-    "noUnusedParameters": false
+    "lib": ["es2022", "dom"]
   }
 }
