--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lil-gui": "^0.11.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.7.1",
     "sass": "^1.89.2",
     "stats.js": "^0.17.0",
     "three": "^0.178.0"
