--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.1",
     "vite": "^7.0.0",
-    "vite-plugin-string": "^1.2.3"
+    "vite-plugin-string": "^1.2.3",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
